[gd_scene load_steps=18 format=2]

[ext_resource path="res://ui/UI.gd" type="Script" id=1]
[ext_resource path="res://ui/StrafeHelmOverlay.gd" type="Script" id=2]
[ext_resource path="res://ui/healthbar.png" type="Texture" id=3]
[ext_resource path="res://ui/hp.png" type="Texture" id=4]
[ext_resource path="res://ui/paused.png" type="Texture" id=5]
[ext_resource path="res://ui/PauseCode.gd" type="Script" id=6]
[ext_resource path="res://ui/keyboard_icon.png" type="Texture" id=7]
[ext_resource path="res://ui/keyboard_border.png" type="Texture" id=8]
[ext_resource path="res://ui/space_icon.png" type="Texture" id=9]
[ext_resource path="res://ui/space_border.png" type="Texture" id=10]
[ext_resource path="res://ui/item_holder.png" type="Texture" id=11]
[ext_resource path="res://ui/strafe_helm_icon.png" type="Texture" id=12]
[ext_resource path="res://ui/TopMessage.gd" type="Script" id=13]
[ext_resource path="res://ui/bar_fade_script.gd" type="Script" id=14]
[ext_resource path="res://ui/Console.gd" type="Script" id=15]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
light_mode = 1

[sub_resource type="Theme" id=2]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="StrafeHelmOverlay" type="Control" parent="."]
material = SubResource( 1 )
script = ExtResource( 2 )

[node name="hp_container" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 206.0
margin_bottom = 9.0
texture = ExtResource( 3 )

[node name="hp_loss" type="TextureRect" parent="hp_container"]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_left = 1.0
margin_top = 1.0
margin_right = 200.0
margin_bottom = 3.0
texture = ExtResource( 4 )
expand = true

[node name="hp_bar" type="TextureRect" parent="hp_container"]
margin_left = 1.0
margin_top = 1.0
margin_right = 200.0
margin_bottom = 3.0
texture = ExtResource( 4 )
expand = true

[node name="Stats" type="Label" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 638.0
margin_bottom = 358.0
align = 2
valign = 2

[node name="Paused" type="Sprite" parent="."]
pause_mode = 2
visible = false
texture = ExtResource( 5 )
centered = false
script = ExtResource( 6 )

[node name="W_icon" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( 9, 346 )

[node name="W_border" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 8 )
centered = false
offset = Vector2( 9, 346 )

[node name="A_icon" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( 3, 352 )

[node name="A_border" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 8 )
centered = false
offset = Vector2( 3, 352 )

[node name="S_icon" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( 9, 352 )

[node name="S_border" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 8 )
centered = false
offset = Vector2( 9, 352 )

[node name="D_icon" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( 15, 352 )

[node name="D_border" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 8 )
centered = false
offset = Vector2( 15, 352 )

[node name="Space_icon" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 9 )
centered = false
offset = Vector2( 22, 352 )

[node name="Space_border" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 10 )
centered = false
offset = Vector2( 22, 352 )

[node name="ClickDot" type="ColorRect" parent="."]
margin_left = 319.0
margin_top = 179.0
margin_right = 321.0
margin_bottom = 181.0
color = Color( 1, 1, 1, 0.498039 )

[node name="ItemHolder" type="Sprite" parent="."]
texture = ExtResource( 11 )
centered = false
offset = Vector2( 602, 5 )

[node name="CurrentItem2" type="Sprite" parent="ItemHolder"]
visible = false
position = Vector2( 602, 5 )
texture = ExtResource( 12 )
centered = false

[node name="ColorRect" type="ColorRect" parent="ItemHolder"]
visible = false
show_behind_parent = true
margin_left = 602.0
margin_top = 5.0
margin_right = 635.0
margin_bottom = 38.0
color = Color( 0, 0, 0, 1 )

[node name="ViewportContainer" type="ViewportContainer" parent="ItemHolder"]
margin_left = 599.0
margin_top = 2.0
margin_right = 638.0
margin_bottom = 41.0
stretch = true

[node name="ItemViewport" type="Viewport" parent="ItemHolder/ViewportContainer"]
size = Vector2( 39, 39 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="OmniLight" type="OmniLight" parent="ItemHolder/ViewportContainer/ItemViewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.697787, 1.24885, 0.543625 )

[node name="Camera" type="Camera" parent="ItemHolder/ViewportContainer/ItemViewport"]
transform = Transform( 0.906308, -0.178606, 0.383022, 0, 0.906308, 0.422618, -0.422618, -0.383022, 0.821394, 0.117102, 1.11772, 0.25 )
projection = 1
current = true
size = 0.55
near = 0.01
far = 2.0

[node name="FadeOut" type="ColorRect" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )

[node name="TopMessage" type="RichTextLabel" parent="."]
margin_top = 20.0
margin_right = 640.0
margin_bottom = 36.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
bbcode_enabled = true
meta_underlined = false
scroll_active = false
script = ExtResource( 13 )

[node name="LoadBar" type="ColorRect" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 100.0
margin_bottom = 102.0
color = Color( 0.0980392, 0.227451, 0.360784, 1 )
script = ExtResource( 14 )

[node name="SaveBar" type="ColorRect" parent="."]
margin_left = 100.0
margin_top = 105.0
margin_right = 100.0
margin_bottom = 107.0
color = Color( 0.345098, 0.176471, 0.0823529, 1 )
script = ExtResource( 14 )

[node name="Console" type="Control" parent="."]
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
theme = SubResource( 2 )
script = ExtResource( 15 )

[node name="ColorRect" type="ColorRect" parent="Console"]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0.12549, 0.12549, 0.12549, 0.866667 )

[node name="ColorRect2" type="ColorRect" parent="Console"]
margin_left = 15.0
margin_top = 318.0
margin_right = 625.0
margin_bottom = 335.0
color = Color( 0, 0, 0, 0.866667 )

[node name="ColorRect3" type="ColorRect" parent="Console"]
margin_left = 15.0
margin_top = 14.0
margin_right = 625.0
margin_bottom = 314.0
color = Color( 0, 0, 0, 0.329412 )

[node name="TypeHere" type="RichTextLabel" parent="Console"]
margin_left = 20.0
margin_top = 320.0
margin_right = 620.0
margin_bottom = 334.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
bbcode_enabled = true
visible_characters = 50
meta_underlined = false
scroll_active = false

[node name="Messages" type="RichTextLabel" parent="Console"]
margin_left = 20.0
margin_top = 15.0
margin_right = 620.0
margin_bottom = 315.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
bbcode_enabled = true
meta_underlined = false
scroll_active = false
scroll_following = true

